<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.tp.viacheslav.rk_go.Activities.MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/date"/>


    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:text="@string/content"/>

    <Button
        android:id="@+id/in_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:layout_above="@+id/no_background"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_above="@+id/change_category"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/change_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_category"
        android:layout_above="@+id/in_background"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/no_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_background"
        android:layout_marginBottom="31dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
